--- a/src/assets/styles/components/molecules/video-feed.scss
+++ b/src/assets/styles/components/molecules/video-feed.scss
@@ -1,5 +1,7 @@
 .video-feed {
-  max-width: 370px;
+  min-width: 380px;
+  max-width: 380px;
+  min-height: 1200px;
 
   &-header {
     @include flex-justify-between;
